--- a/css/style.css
+++ b/css/style.css
@@ -661,19 +661,19 @@ sup.redstar {
 }
 
 .nav-bar-main-block.menu-active .menu-toggle .bar:first-child {
-  -webkit-transform: translateY(8px) rotate(45deg);
-  -moz-transform: translateY(8px) rotate(45deg);
-  -ms-transform: translateY(8px) rotate(45deg);
-  -o-transform: translateY(8px) rotate(45deg);
-  transform: translateY(8px) rotate(45deg);
+  -webkit-transform: translateY(10px) rotate(45deg);
+  -moz-transform: translateY(10px) rotate(45deg);
+  -ms-transform: translateY(10px) rotate(45deg);
+  -o-transform: translateY(10px) rotate(45deg);
+  transform: translateY(10px) rotate(45deg);
 }
 
 .nav-bar-main-block.menu-active .menu-toggle .bar:last-child {
-  -webkit-transform: translateY(-8px) rotate(-45deg);
-  -moz-transform: translateY(-8px) rotate(-45deg);
-  -ms-transform: translateY(-8px) rotate(-45deg);
-  -o-transform: translateY(-8px) rotate(-45deg);
-  transform: translateY(-8px) rotate(-45deg);
+  -webkit-transform: translateY(-10px) rotate(-45deg);
+  -moz-transform: translateY(-10px) rotate(-45deg);
+  -ms-transform: translateY(-10px) rotate(-45deg);
+  -o-transform: translateY(-10px) rotate(-45deg);
+  transform: translateY(-10px) rotate(-45deg);
 }
 
 .nav-bar-main-block .main-menu {
@@ -1348,14 +1348,14 @@ color: #7b6cd5;
 .pricing .pricing-plans .pricing-plan.two .pricing-head,
 .testimonials .owl-carousel .owl-nav .owl-next:hover,
 .testimonials .owl-carousel .owl-nav .owl-prev:hover {
-  background: linear-gradient(-45deg, #cf11da 0%, #3482fd 100%);
+  /* background: linear-gradient(-45deg, #cf11da 0%, #3482fd 100%); */
 }
 
 .about-us .about-info h3,
 .about-us .about-info .progress-container .percent,
 .class-schedule .filter-menu .list-filter li,
 .class-schedule .timetable tr td h4,
-.team .member .member-info span {
+.team .member .member-info a {
   background: linear-gradient(-45deg, #cf11da 0%, #3482fd 100%);
   -webkit-background-clip: text;
   color: transparent;
@@ -1895,7 +1895,7 @@ color: #e0dede;
 -----------------------------------------*/
 
 .call-to-action {
-  background: #7b6cd5;
+  /* background: #7b6cd5; */
   color: #fff;
   padding: 65px 0;
   position: relative;
@@ -1936,7 +1936,6 @@ color: #e0dede;
 }
 .main-btn {
   position: relative;
-  /* background: #7b6cd5; */
   color: #fff;
   min-width: 150px;
   border-radius: 4px;
@@ -1946,13 +1945,34 @@ color: #e0dede;
   letter-spacing: 1.1px;
   text-align: center;
   padding: 15px 20px;
-  /* border: 2px solid #7b6cd5; */
   outline: none;
   cursor: pointer;
   margin-right: 14px;
   overflow: hidden;
   box-shadow: 0 2px 4px rgb(4 6 6 / 15%);
   
+}
+.main-btn span {
+  position: relative;
+  z-index: 2;
+}
+.main-btn:before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: -25%;
+  height: 104%;
+  width: 0;
+  -webkit-transform: skew(-22deg);
+  -moz-transform: skew(-22deg);
+  -ms-transform: skew(-22deg);
+  -o-transform: skew(-22deg);
+  transform: skew(-22deg);
+  transition-duration: .6s;
+  z-index: 1;
+}
+.main-btn:hover:before {
+  width: 190%;
 }
 
 /* --------------------------------------
@@ -2193,9 +2213,9 @@ color: #e0dede;
   text-transform: capitalize;
 }
 
-.team .member .member-info span {
+.team .member .member-info a {
 	display: block;
-  color: #7b6cd5;
+  /* color: #7b6cd5; */
   font-weight: 400;
   text-align: center;
 }
@@ -2285,7 +2305,7 @@ z-index: 1;
 }
 
 .pricing .pricing-plans .pricing-plan .pricing-price p {
-  color: #7b6cd5;
+  /* color: #7b6cd5; */
 }
 
 .pricing .pricing-plans .pricing-plan.two .pricing-price p {
@@ -2676,7 +2696,24 @@ border-radius: 4px;
   transition: all .7s linear;
 overflow: hidden;
 }
-
+/* ------------------------ */
+.back-to-top {
+  position: fixed;
+  bottom: 30px;
+  right: 30px;
+  width: 64px;
+  height: 64px;
+  z-index: 9999;
+  cursor: pointer;
+  text-decoration: none;
+  transition: opacity 0.2s ease-out;
+  /* background-image: url(top.png); */
+ }
+ 
+ .back-to-top:hover{
+  opacity: 0.7;
+ }
+/* ------------------------ */
 .scroll-top.active {
   bottom: 25px;
 }
@@ -2715,6 +2752,291 @@ border: 2px solid #604dd6;
 .scroll-top:hover:before {
   width: 190%;
 }
+
+.main-title .separator {
+  position: relative;
+  width: 160px;
+  display: inline-block;
+}
+.main-title .separator:before {
+  left: 3px;
+}.main-title .separator:after {
+  right: 3px;
+}
+.main-title .separator:before ,
+.main-title .separator:after  {
+  background: linear-gradient(-45deg, #cf11da 0%, #3482fd 100%);
+  content: '';
+  position: absolute;
+  top: 50%;
+  margin-top: -1px;
+  height: 2px;
+  width: 50px;
+}
+
+/* --------------------------------------
+   Team Single
+-----------------------------------------*/
+
+.team-single {
+	background: #fff;
+	padding-top: 100px;
+    padding-bottom: 70px;
+}
+
+.team-single .trainer-info h3 {
+    font-size: 24px;
+    letter-spacing: .4px;
+    line-height: 1.3;
+    color: #323232;
+    font-weight: 700;
+    margin: 0;
+    margin-bottom: 15px;
+    text-transform: capitalize;
+}
+
+.team-single .trainer-info p {
+    line-height: 1.8;
+    font-weight: 400;
+    color: #888;
+    font-size: 15px;
+    margin-bottom: 15px;
+}
+
+.team-single .trainer-info .info > li {
+    font-size: 16px;
+    letter-spacing: .4px;
+    color: #888;
+    margin-bottom: 20px;
+}
+
+.team-single .trainer-info .info > li:last-of-type {
+    margin-bottom: 0;
+}
+
+.team-single .trainer-info .info > li span {
+	display: inline-block;
+	font-weight: 600;
+	width: 20%;
+}
+
+.team-single .trainer-info .info > li .social {
+    display: inline-block;
+}
+
+.team-single .trainer-info .info > li .social li {
+    display: inline-block;
+    margin-right: 8px;
+}
+
+.team-single .trainer-info .info > li .social li a {
+    display: inline-block;
+    width: 35px;
+    height: 35px;
+    line-height: 34px;
+    text-align: center;
+    font-size: 16px;
+    color: #7b6cd5;
+    border-radius: 50%;
+    background: transparent;
+    border: 1px solid #7b6cd5;
+    -webkit-transition: color 0s ease-in-out;
+    -moz-transition: color 0s ease-in-out;
+    -o-transition: color 0s ease-in-out;
+    -ms-transition: color 0s ease-in-out;
+    transition: color 0s ease-in-out;
+}
+
+.team-single .trainer-info .info > li .social li a:hover {
+    color: #fff;
+    background: #7b6cd5;
+    border: 1px solid #7b6cd5;
+}
+
+.team-single .trainer-info .view-classes {
+    position: absolute;
+	top: -10px;
+	right: 0;
+	color: #7b6cd5;
+	font-size: 15px;
+}
+
+.team-single .trainer-info .view-classes i {
+    display: inline-block;
+	margin-right: 4px;
+}
+
+.team-single .my-classes {
+    padding-top: 100px;
+    padding-bottom: 100px;
+}
+
+.team-single .my-classes h3 {
+    font-size: 24px;
+    letter-spacing: .4px;
+    line-height: 1.3;
+    color: #323232;
+    font-weight: 700;
+    margin: 0;
+    margin-bottom: 15px;
+    text-transform: capitalize;
+}
+
+.team-single .my-classes p {
+    line-height: 1.8;
+    font-weight: 400;
+    color: #888;
+    font-size: 15px;
+    margin-bottom: 0;
+}
+
+.team-single .related-trainers {
+    margin-bottom: 0;
+}
+
+.team-single .related-trainers h3 {
+    font-size: 24px;
+    letter-spacing: .4px;
+    line-height: 1.3;
+    color: #323232;
+    font-weight: 700;
+    margin: 0;
+    margin-bottom: 40px;
+    text-transform: capitalize;
+}
+
+.team-single .related-trainers .member {
+    margin-bottom: 30px;
+}
+
+.team-single .related-trainers .member .member-img {
+    border-radius: 8px;
+	position: relative;
+    overflow: hidden;
+}
+
+.team-single .related-trainers .member .member-img img {
+    display: block;
+    max-width: 100%;
+    height: auto;
+}
+
+.team-single .related-trainers .member .member-img:hover img {
+    -webkit-transform: scale(1.1);
+    -moz-transform:scale(1.1);
+    -ms-transform: scale(1.1);
+    -o-transform: scale(1.1);
+    transform: scale(1.1);
+}
+
+.team-single .related-trainers .member .member-img .overlay {
+    position: absolute;
+	top: 0;
+	left: 0;
+	bottom: 0;
+	right: 0;
+	background: rgba(0, 0, 0, .5);
+	transform: scaleX(0);
+	-webkit-transition: all .5s ease-in-out;
+    -moz-transition: all .5s ease-in-out;
+    -o-transition: all .5s ease-in-out;
+    -ms-transition: all .5s ease-in-out;
+    transition: all .5s ease-in-out;
+}
+
+.team-single .related-trainers .member .member-img:hover .overlay {
+	transform: scaleX(1);
+}
+
+.team-single .related-trainers .member .member-img .overlay .social-media {
+	position: relative;
+	top: 50%;
+	transform: translateY(-50%);
+}
+
+.team-single .related-trainers .member .member-img .social-media i {
+    display: inline-block;
+    width: 35px;
+    height: 35px;
+    line-height: 35px;
+    text-align: center;
+    border-radius: 50%;
+    font-size: 16px;
+    font-weight: 600;
+    background: #7b6cd5;
+    color: #fff;
+	margin-right: 6px;
+	transform: translateY(40px);
+	visibility: hidden;
+	opacity: 0;
+	-webkit-transition: all .5s ease-in-out;
+    -moz-transition: all .5s ease-in-out;
+    -o-transition: all .5s ease-in-out;
+    -ms-transition: all .5s ease-in-out;
+    transition: all .5s ease-in-out;
+}
+
+.team-single .related-trainers .member .member-img .social-media i:hover {
+    background: #604dd6;
+}
+
+.team-single .related-trainers .member .member-img:hover .social-media i {
+	transform: translateY(0);
+	visibility: visible;
+	opacity: 1;
+}
+
+.team-single .related-trainers .member .member-img:hover .social-media .fa-facebook {
+	-webkit-transition-delay: 0s;
+    -o-transition-delay: 0s;
+    -moz-transition-delay: 0s;
+    -o-transition-delay: 0s;
+    transition-delay: 0s;
+}
+
+.team-single .related-trainers .member .member-img:hover .social-media .fa-twitter {
+	-webkit-transition-delay: .15s;
+    -o-transition-delay: .15s;
+    -moz-transition-delay: .15s;
+    -o-transition-delay: .15s;
+    transition-delay: .15s;
+}
+
+.team-single .related-trainers .member .member-img:hover .social-media .fa-google-plus {
+    -webkit-transition-delay: .3s;
+    -o-transition-delay: .3s;
+    -moz-transition-delay: .3s;
+    -o-transition-delay: .3s;
+    transition-delay: .3s;
+}
+
+.team-single .related-trainers .member .member-img:hover .social-media .fa-instagram {
+    -webkit-transition-delay: .45s;
+    -o-transition-delay: .45s;
+    -moz-transition-delay: .45s;
+    -o-transition-delay: .45s;
+    transition-delay: .45s;
+}
+
+.team-single .related-trainers .member .member-info .member-name {
+    color: #323232;
+    font-size: 20px;
+    line-height: 1;
+    letter-spacing: .3px;
+    margin-top: 20px;
+    margin-bottom: 6px;
+    text-align: center;
+    font-weight: 600;
+    text-transform: capitalize;
+}
+
+.team-single .related-trainers .member .member-info span {
+	display: block;
+    color: #7b6cd5;
+    font-weight: 400;
+    text-align: center;
+}
+
 /* custom home page */
 
 
@@ -4595,28 +4917,30 @@ right: 0;
   position: absolute;
   top: 15px;
   right: 15px;
-  width: 32px;
-  height: 32px;
-  line-height: 31px;
-text-align: center;
-  border-radius: 50%;
+  text-align: center;
   font-size: 17px;
-background: transparent;
+  background: transparent;
   color: #7b6cd5;
-  border: 1px solid #7b6cd5;
--webkit-transition: all .01s ease-in-out;
+  -webkit-transition: all .01s ease-in-out;
   -moz-transition: all .01s ease-in-out;
   -o-transition: all .01s ease-in-out;
   -ms-transition: all .01s ease-in-out;
   transition: all .01s ease-in-out;
+  border: unset;
 }
 
-.side-menu .side-menu-close:hover {
- background: #7b6cd5;
+.side-menu .side-menu-close i:hover {
+  background: #7b6cd5;
   color: #fff;
   border: 1px solid #7b6cd5;
 }
-
+.side-menu .side-menu-close i{
+  width: 32px;
+  height: 32px;
+  line-height: 31px;
+  border: 1px solid #7b6cd5;
+  border-radius: 50%;
+}
 .side-menu .my-logo {
   color: #323232;
   font-size: 22px;
@@ -4680,7 +5004,7 @@ display: block;
   margin-right: 0;
 }
 
-.side-menu .social-icons li a {
+.side-menu .social-icons li a i {
 display: inline-block;
 width: 32px;
   height: 32px;
@@ -4699,7 +5023,7 @@ background: transparent;
   transition: all .01s ease-in-out;
 }
 
-.side-menu .social-icons li a:hover {
+.side-menu .social-icons li a i:hover {
 background: #7b6cd5;
   color: #fff;
 }
